<resources>
    <string name="app_name">格林办公</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="message">消息</string>
    <string name="contacts">通讯录</string>
    <string name="application">应用</string>
    <string name="personal">个人中心</string>
    <string name="userNameTest"></string>
    <string name="employeeCode">员工号:</string>
    <string name="employeeCodeDemo">H007</string>
    <string name="employeeDeptDemo"></string>
    <string name="employeePostDemo"></string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="company">公司信息</string>
    <string name="services">订阅服务</string>
    <string name="setting">设置</string>
    <string name="feedback">帮助与反馈</string>
    <string name="organization">组织结构</string>
    <string name="appLogo">应用图标</string>
    <string name="resetPassword">忘记密码?</string>
    <string name="login">登 录</string>
    <string name="accountSetting">账号设置</string>
    <string name="version">版本更新</string>
    <string name="general">通用</string>
    <string name="messageSetting">消息通知</string>
    <string name="updateMobile">更换手机号</string>
    <string name="mobileDemo">18601969158</string>
    <string name="modifyPassword">修改密码</string>
    <string name="complete">完成</string>
    <string name="activityType" translatable="false">活动类型</string>
    <string name="activityPlace" translatable="false">活动地点</string>
    <string name="assembingPlace" translatable="false">集合地点</string>
    <string name="startTime" translatable="false">开始时间</string>
    <string name="bonus" translatable="false">红包金额</string>
    <string name="applicationPerson" translatable="false">申请人:</string>
    <string name="offType" translatable="false">类     型:</string>
    <string name="startDate" translatable="false">开始日期:</string>
    <string name="endDate" translatable="false">结束日期:</string>
    <string name="offDays" translatable="false">请假天数:</string>
    <string name="replaceName" translatable="false">工作暂代:</string>
    <string name="offReasons" translatable="false">请假理由:</string>

    <string name="scan">扫一扫签到</string>
    <string name="shake">摇一摇红包</string>

</resources>
