<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackgroundGray">

    <!-- TODO: Update blank fragment layout -->
    <include layout="@layout/base_top_bar" android:id="@+id/layout_top_bar"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_block"
        android:padding="@dimen/dp_10">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_avatar"
            android:layout_width="68dp"
            android:layout_height="68dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_avatar_default"
            app:riv_border_color="@color/darkGray"
            app:riv_border_width="1dp"
            app:riv_corner_radius="6dp"
            app:riv_mutate_background="true"
            app:riv_oval="false" />

        <TextView
            android:id="@+id/tv_userName"
            android:text="@string/userNameTest"
            app:layout_constraintLeft_toRightOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            style="@style/nameTextStyle" />

        <TextView
            android:id="@+id/tv_dept"
            android:text="@string/employeeDeptDemo"
            style="@style/LabelTextViewStyle"
            app:layout_constraintTop_toBottomOf="@+id/tv_userName"
            app:layout_constraintLeft_toRightOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/tv_empCode"
            android:text="@string/employeePostDemo"
            app:layout_constraintTop_toBottomOf="@+id/tv_userName"
            app:layout_constraintLeft_toRightOf="@+id/tv_dept"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/LabelTextViewStyle" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/shape_background_block"
        android:divider="@drawable/shape_background_item_bottom_divider"
        android:showDividers="middle"
        android:orientation="vertical"
        android:padding="@dimen/dp_1">

        <include layout="@layout/layout_personl_item_company" android:id="@+id/layout_company"/>
        <include layout="@layout/layout_personl_item_services" android:id="@+id/layout_subscribe"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/shape_background_block"
        android:divider="@drawable/shape_background_item_bottom_divider"
        android:showDividers="middle"
        android:padding="@dimen/dp_1"
        android:orientation="vertical">

        <include layout="@layout/layout_personl_item_setting" android:id="@+id/layout_setting"/>
        <include layout="@layout/layout_personl_item_help" android:id="@+id/layout_help"/>


    </LinearLayout>





</LinearLayout>