<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="@dimen/dp_60"
            android:contentDescription="@string/appLogo"
            android:src="@mipmap/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_app_name"
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/dp_6"
            android:fontFamily="sans-serif-medium"
            android:src="@drawable/ic_text_logo"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />


        <com.hyetec.hmdp.view.SuperEditText
            android:id="@+id/tv_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="48dp"
            app:cursor="@drawable/shape_cursor"
            app:delete_height="80"
            app:delete_width="80"
            app:delete_x="0"
            app:delete_y="0"
            app:ic_delete="@drawable/ic_delete"
            app:ic_left_click="@drawable/ic_user_focus"
            app:ic_left_unclick="@drawable/ic_user_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_app_name"
            app:left_height="60"
            app:left_width="60"
            app:left_x="0"
            app:left_y="0"
            app:lineColor_click="@color/colorFocus"
            app:lineColor_unclick="@color/colorDeafult"
            app:linePosition="1"

            />

        <com.hyetec.hmdp.view.SuperEditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="48dp"
            android:inputType="textPassword"
            app:cursor="@drawable/shape_cursor"
            app:delete_height="80"
            app:delete_width="80"
            app:delete_x="0"
            app:delete_y="0"
            app:ic_delete="@drawable/ic_delete"
            app:ic_left_click="@drawable/ic_pwd_focus"
            app:ic_left_unclick="@drawable/ic_pwd_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_userName"
            app:left_height="60"
            app:left_width="60"
            app:left_x="0"
            app:left_y="0"
            app:lineColor_click="@color/colorFocus"
            app:lineColor_unclick="@color/colorDeafult"
            app:linePosition="1"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:paddingBottom="12dp"
            android:text="@string/login"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/ic_submit"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:text="@string/resetPassword"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
