<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:spinner="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/base_top_bar"
        layout="@layout/base_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_block"
        android:orientation="vertical"
        android:padding="@dimen/dp_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="horizontal"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_update_type"
                style="@style/OffItemStyle">


                <TextView
                    android:id="@+id/name"
                    android:textStyle="bold"
                    style="@style/SettingTextStyle"
                    android:text="@string/applicationPerson"
                    android:paddingTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/offName"
                    style="@style/SettingTextStyle"
                    android:paddingTop="8dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:minWidth="80dp"
                    android:minHeight="32dp"
                    android:hint="Name" />

                <TextView
                    android:id="@+id/offId"
                    style="@style/SettingTextStyle"
                    android:hint="ID"
                    android:paddingTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:minHeight="32dp"
                    android:gravity="center"
                    android:minWidth="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="vertical"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                style="@style/OffItemStyle">

                <TextView
                    android:textStyle="bold"
                    android:id="@+id/textView3"
                    style="@style/SettingTextStyle"
                    android:text="类     型:"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_1"
                    spinner:ignore="MissingConstraints">

                    <com.hyetec.moa.utils.spinner.MaterialSpinner
                        android:id="@+id/off_Type"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textSize="14sp"
                        spinner:ignore="MissingConstraints"
                        spinner:ms_background_color="@android:color/white"
                        spinner:ms_popupwindow_height="wrap_content"
                        spinner:ms_popupwindow_maxheight="200dp"
                        spinner:ms_text_color="@android:color/black" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="vertical"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                style="@style/OffItemStyle">

                <TextView
                    android:textStyle="bold"
                    style="@style/SettingTextStyle"
                    android:text="@string/startDate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/start_date"
                    android:background="@drawable/edit_bg"
                    style="@style/SettingTextStyle"
                    android:minHeight="32dp"
                    android:minWidth="200dp"
                    android:gravity="center"
                    android:hint="请选择日期"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="vertical"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                style="@style/OffItemStyle">

                <TextView
                    android:textStyle="bold"
                    style="@style/SettingTextStyle"
                    android:text="@string/endDate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/end_date"
                    android:background="@drawable/edit_bg"
                    style="@style/SettingTextStyle"
                    android:minHeight="32dp"
                    android:minWidth="200dp"
                    android:gravity="center"
                    android:hint="请选择日期"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="vertical"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                style="@style/OffItemStyle">

                <TextView
                    android:textStyle="bold"
                    style="@style/SettingTextStyle"
                    android:text="@string/offDays"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/leave_days"
                    android:background="@drawable/edit_bg"
                    style="@style/SettingTextStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:minHeight="32dp"
                    android:gravity="center"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="vertical"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                style="@style/OffItemStyle">

                <TextView
                    android:textStyle="bold"
                    style="@style/SettingTextStyle"
                    android:text="@string/replaceName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/replace_name"
                    android:background="@drawable/edit_bg"
                    style="@style/SettingTextStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:minHeight="32dp"
                    android:minWidth="200dp"
                    android:gravity="center"
                    android:hint="请输入工作暂代姓名"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_block"
            android:orientation="vertical"
            android:padding="@dimen/dp_1">

            <android.support.constraint.ConstraintLayout
                style="@style/OffItemStyle">

                <TextView
                    android:textStyle="bold"
                    style="@style/SettingTextStyle"
                    android:text="@string/offReasons"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/reason"
                    android:background="@drawable/edit_bg"
                    style="@style/SettingTextStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:minHeight="56dp"
                    android:minWidth="200dp"
                    android:gravity="center"
                    android:hint="请输入请假理由"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>